# mcpkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  RELEASING.md  ROADMAP.md  SECURITY.md  _typos.toml  codecov.yml  deny.toml
benches/: BENCHMARK_BASELINE.md  Cargo.toml
benches/benches/: memory.rs  serialization.rs  tool_invocation.rs  transport.rs
benches/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: builder.rs  client.rs  handler.rs  lib.rs  pool.rs
crates/mcp-macros/: Cargo.toml
crates/mcp-macros/src/: attrs.rs  codegen.rs  derive.rs  lib.rs  resource.rs  server.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: builder.rs  context.rs  handler.rs  lib.rs  router.rs  server.rs  state.rs
crates/mcp-server/src/capability/: completions.rs  elicitation.rs  mod.rs  prompts.rs  resources.rs  sampling.rs  tasks.rs  tools.rs
crates/mcp-testing/: Cargo.toml
crates/mcp-testing/src/: assertions.rs  fixtures.rs  lib.rs  mock.rs
crates/mcp-transport/: Cargo.toml
crates/mcp-transport/src/: error.rs  http.rs  lib.rs  memory.rs  pool.rs  runtime.rs  stdio.rs  telemetry.rs  traits.rs  unix.rs  websocket.rs
crates/mcp-transport/src/middleware/: logging.rs  metrics.rs  mod.rs  rate_limit.rs  retry.rs  timeout.rs
crates/mcp-transport/tests/: resilience.rs
crates/mcpkit-actix/: Cargo.toml  README.md
crates/mcpkit-actix/src/: error.rs  handler.rs  lib.rs  router.rs  session.rs  state.rs
crates/mcpkit-agent/: Cargo.toml  README.md
crates/mcpkit-agent/src/: agent.rs  error.rs  executor.rs  lib.rs  react.rs  tool.rs
crates/mcpkit-axum/: Cargo.toml  README.md
crates/mcpkit-axum/src/: error.rs  handler.rs  lib.rs  router.rs  session.rs  state.rs
crates/mcpkit-axum/tests/: completion.rs  logging_setlevel.rs  tasks.rs
crates/mcpkit-chain/: Cargo.toml  README.md
crates/mcpkit-chain/src/: error.rs  lib.rs  llm.rs  runnable.rs  runnables.rs
crates/mcpkit-client/: Cargo.toml  README.md
crates/mcpkit-client/src/: builder.rs  client.rs  discovery.rs  handler.rs  lib.rs  pool.rs
crates/mcpkit-core/: Cargo.toml  README.md
crates/mcpkit-core/benches/: comparison.rs  protocol.rs
crates/mcpkit-core/src/: auth.rs  capability.rs  error.rs  extension.rs  lib.rs  pagination.rs  protocol.rs  protocol_version.rs  schema.rs  state.rs  tasks.rs
crates/mcpkit-core/src/auth/: identity.rs  jwt.rs  mod.rs  oauth.rs
crates/mcpkit-core/src/debug/: inspector.rs  mod.rs  recorder.rs  validator.rs
crates/mcpkit-core/src/error/: codes.rs  context.rs  details.rs  jsonrpc.rs  mod.rs  types.rs  (+1 more)
crates/mcpkit-core/tests/: property_serialization.rs  transport_edge_cases.rs
crates/mcpkit-embedding/: Cargo.toml  README.md
crates/mcpkit-embedding/src/: distance.rs  error.rs  lib.rs  memory_store.rs  postgres_store.rs  sqlite_store.rs  store.rs
crates/mcpkit-eval/: Cargo.toml  README.md
crates/mcpkit-eval/src/: error.rs  lib.rs  metric.rs  runner.rs  test_case.rs
crates/mcpkit-macros/: Cargo.toml  README.md
crates/mcpkit-macros-tests/: Cargo.toml
crates/mcpkit-macros-tests/src/: lib.rs
crates/mcpkit-macros-tests/tests/: client_url_elicitation.rs  expand.rs  param_defaults.rs  schema_fidelity.rs  schema_ordering.rs  structured_output.rs  tool_metadata.rs
crates/mcpkit-macros/src/: attrs.rs  client.rs  codegen.rs  derive.rs  error.rs  lib.rs  prompt.rs  resource.rs  server.rs  tool.rs
crates/mcpkit-macros/tests/: compile_fail.rs
crates/mcpkit-memory/: Cargo.toml  README.md
crates/mcpkit-memory/src/: buffer.rs  error.rs  lib.rs  memory.rs  summary.rs  token.rs  window.rs
crates/mcpkit-provider/: Cargo.toml  README.md
crates/mcpkit-provider/src/: error.rs  lib.rs  provider.rs  rate_limit.rs  retry.rs  streaming.rs  types.rs
crates/mcpkit-provider/tests/: openai_integration.rs
crates/mcpkit-rag/: Cargo.toml  README.md
crates/mcpkit-rag/src/: document.rs  error.rs  lib.rs  loader.rs  pipeline.rs  retriever.rs  splitter.rs
crates/mcpkit-server/: Cargo.toml  README.md
crates/mcpkit-server/src/: builder.rs  context.rs  dispatch.rs  handler.rs  health.rs  lib.rs  metrics.rs  router.rs  server.rs  state.rs  validation.rs
crates/mcpkit-server/tests/: async_cancellation.rs
crates/mcpkit-template/: Cargo.toml  README.md
crates/mcpkit-template-derive/: Cargo.toml  README.md
crates/mcpkit-template-derive/src/: lib.rs
crates/mcpkit-template/src/: error.rs  lib.rs  prompt.rs  runtime.rs
crates/mcpkit-template/test_templates/: greeting.txt
crates/mcpkit-template/tests/: derive_integration.rs
crates/mcpkit-testing/: Cargo.toml  README.md
crates/mcpkit-testing/src/: assertions.rs  async_helpers.rs  client.rs  fixtures.rs  lib.rs  mock.rs  scenario.rs  session.rs
crates/mcpkit-transport/: Cargo.toml  README.md  build.rs
crates/mcpkit-transport/proto/: mcp.proto
crates/mcpkit-transport/src/: error.rs  http.rs  lib.rs  memory.rs  pool.rs  runtime.rs  spawn.rs  stdio.rs  telemetry.rs  traits.rs  unix.rs  websocket.rs  windows.rs
crates/mcpkit-transport/tests/: middleware_interaction.rs  resilience.rs
crates/mcpkit-warp/: Cargo.toml  README.md
crates/mcpkit-warp/src/: error.rs  handler.rs  lib.rs  router.rs  session.rs  state.rs
crates/mcpkit-warp/tests/: integration.rs
examples/client-example/: Cargo.toml
examples/client-example/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_jsonrpc_message.rs  fuzz_jsonrpc_request.rs  fuzz_jsonrpc_response.rs  fuzz_jsonrpc_structured.rs  fuzz_progress_token.rs  fuzz_protocol_version.rs
mcp/: Cargo.toml
mcp/src/: lib.rs  prelude.rs
mcpkit/: Cargo.toml
mcpkit/src/: lib.rs  prelude.rs
mcpkit/tests/: capabilities_compliance.rs  capability_negotiation_compatibility.rs  client_message_routing.rs  error_scenarios.rs  http_e2e.rs  initialization_compliance.rs  json_rpc_compliance.rs  oauth_integration.rs  prompts_integration.rs  request_id_correlation.rs  resources_integration.rs  tool_schema_compatibility.rs  tools_integration.rs  transport_e2e.rs  websocket_e2e.rs
(+222 files in other folders)
