[workspace]
resolver = "2"
members = [
    "crates/mcp-core",
    "crates/mcp-transport",
    "crates/mcp-server",
    "crates/mcp-client",
    "crates/mcp-macros",
    "crates/mcp-testing",
    "mcp",
    "examples/minimal-server",
    "examples/full-server",
    "examples/http-server",
    "examples/websocket-server",
    "examples/client-example",
    "examples/with-middleware",
    "examples/database-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/rust-mcp-sdk"
homepage = "https://github.com/anthropics/rust-mcp-sdk"
documentation = "https://docs.rs/mcp"
keywords = ["mcp", "model-context-protocol", "ai", "llm", "claude"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Async runtime abstraction
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"

# Tokio (optional runtime)
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP/WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.7" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
hyper = { version = "1.0", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = { version = "2.5", features = ["serde"] }
bytes = "1.5"
rand = "0.8"
sha2 = "0.10"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"

# Internal crates
mcp-core = { path = "crates/mcp-core" }
mcp-transport = { path = "crates/mcp-transport" }
mcp-server = { path = "crates/mcp-server" }
mcp-client = { path = "crates/mcp-client" }
mcp-macros = { path = "crates/mcp-macros" }
mcp-testing = { path = "crates/mcp-testing" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
