[workspace]
resolver = "2"
members = [
    "crates/mcpkit-core",
    "crates/mcpkit-transport",
    "crates/mcpkit-server",
    "crates/mcpkit-client",
    "crates/mcpkit-macros",
    "crates/mcpkit-testing",
    "crates/mcpkit-axum",
    "crates/mcpkit-actix",
    "mcpkit",
    "examples/minimal-server",
    "examples/full-server",
    "examples/http-server",
    "examples/websocket-server",
    "examples/client-example",
    "examples/with-middleware",
    "examples/database-server",
    "benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/praxiomlabs/mcpkit"
homepage = "https://github.com/praxiomlabs/mcpkit"
documentation = "https://docs.rs/mcpkit"
keywords = ["mcp", "mcp-protocol", "ai", "llm", "sdk"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Async runtime abstraction
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"

# Tokio (optional runtime)
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP/WebSocket
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = { version = "0.7" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
hyper = { version = "1.0", features = ["full"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = { version = "2.5", features = ["serde"] }
bytes = "1.5"
rand = "0.8"
sha2 = "0.10"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Proc macros
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Testing
tokio-test = "0.4"
pretty_assertions = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Internal crates - path takes precedence locally, version used for publishing
mcpkit-core = { version = "0.1.0", path = "crates/mcpkit-core" }
mcpkit-transport = { version = "0.1.0", path = "crates/mcpkit-transport" }
mcpkit-server = { version = "0.1.0", path = "crates/mcpkit-server" }
mcpkit-client = { version = "0.1.0", path = "crates/mcpkit-client" }
mcpkit-macros = { version = "0.1.0", path = "crates/mcpkit-macros" }
mcpkit-testing = { version = "0.1.0", path = "crates/mcpkit-testing" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
