[package]
name = "mcpkit-benches"
version = "0.0.0"
edition = "2024"
publish = false
description = "Benchmarks for mcpkit-sdk"

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "tool_invocation"
harness = false

[[bench]]
name = "transport"
harness = false

[[bench]]
name = "memory"
harness = false

[dependencies]
mcpkit-core.workspace = true
mcpkit-server.workspace = true
mcpkit-transport.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true
