[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client implementation for the Rust MCP SDK"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
mcp-core = { path = "../mcp-core" }
mcp-transport = { path = "../mcp-transport" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync", "rt"] }

# Error handling
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test.workspace = true
pretty_assertions.workspace = true

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "mcp-transport/tokio-runtime"]

[lints]
workspace = true
