[package]
name = "mcp-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros for the Rust MCP SDK"
repository.workspace = true
keywords = ["mcp", "model-context-protocol", "ai", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
darling = "0.20"

[dev-dependencies]
mcp-core = { path = "../mcp-core" }
