[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server implementation for the Rust MCP SDK"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
mcp-transport = { path = "../mcp-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "mcp-transport/tokio-runtime"]

[lints]
workspace = true
