[package]
name = "mcp-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Testing utilities for the Rust MCP SDK"
repository.workspace = true
keywords = ["mcp", "model-context-protocol", "testing"]
categories = ["development-tools::testing"]

[dependencies]
# Internal crates
mcp-core = { path = "../mcp-core" }
mcp-transport = { path = "../mcp-transport" }
mcp-server = { path = "../mcp-server" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
