[package]
name = "mcp-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transport abstractions for the Rust MCP SDK"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mcp-core = { path = "../mcp-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

# Runtime-specific dependencies
tokio = { version = "1", features = ["io-util", "io-std", "sync", "rt", "net", "time"], optional = true }
async-std = { version = "1", optional = true }
smol = { version = "2", optional = true }
async-io = { version = "2", optional = true }

# HTTP transport
reqwest = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }

# WebSocket transport
tokio-tungstenite = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
async-std-runtime = ["async-std", "async-io"]
smol-runtime = ["smol", "async-io"]
http = ["reqwest", "axum", "hyper", "tokio-runtime"]
websocket = ["tokio-tungstenite", "tokio-runtime"]
full = ["http", "websocket"]

[lints]
workspace = true
