[package]
name = "mcpkit-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent patterns and tool execution for LLM-powered autonomous agents"
readme = "README.md"
keywords = ["agent", "react", "llm", "tools", "autonomous"]
categories = ["asynchronous", "data-structures"]

[lints]
workspace = true

[dependencies]
# Provider for LLM operations
mcpkit-provider.workspace = true

# Chain primitives
mcpkit-chain.workspace = true

# Memory for conversation history
mcpkit-memory.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async support
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
