[package]
name = "mcpkit-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Composable chain primitives for LLM orchestration workflows"
readme = "README.md"
keywords = ["chain", "pipeline", "llm", "orchestration", "composition"]
categories = ["asynchronous", "data-structures"]

[lints]
workspace = true

[dependencies]
# Provider for LLM operations
mcpkit-provider.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async support
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
