[package]
name = "mcpkit-core"
description = "Core types and traits for the Model Context Protocol (MCP)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Async (minimal - no runtime dependency)
futures.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
url.workspace = true

# OAuth 2.1 / PKCE support
rand.workspace = true
sha2.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# For comparison benchmarks
rmcp = "0.9"

[features]
default = []
# Enable miette's fancy error reporting (terminal colors, etc.)
fancy-errors = ["miette/fancy"]

[lints]
workspace = true

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "comparison"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]
