[package]
name = "mcpkit-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["mcp", "llm", "evaluation", "testing", "ai"]
categories = ["api-bindings", "development-tools::testing"]
description = "LLM evaluation and testing framework for mcpkit-forge"

[dependencies]
# Internal crates
mcpkit-provider.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
