[package]
name = "mcpkit-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros for mcpkit"
repository.workspace = true
keywords = ["mcp", "mcp-protocol", "ai", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
darling = "0.20"

[dev-dependencies]
# Only mcpkit-core needed for compile-fail tests (no circular dependency)
mcpkit-core = { version = "0.3", path = "../mcpkit-core" }
trybuild = "1.0"
