[package]
name = "mcpkit-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["mcp", "llm", "memory", "conversation", "context"]
categories = ["api-bindings", "asynchronous"]
description = "Conversation memory management for mcpkit-forge orchestration layer"

[dependencies]
mcpkit-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions.workspace = true

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]

[lints]
workspace = true
