[package]
name = "mcpkit-provider"
description = "Multi-LLM provider abstraction for mcpkit-forge orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["mcp", "llm", "ai", "provider", "openai", "anthropic"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Core mcpkit for types
mcpkit-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Async
futures.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true

# HTTP client (for API providers)
reqwest = { workspace = true, optional = true }

# Streaming support
bytes.workspace = true
tokio = { workspace = true, optional = true, features = ["sync"] }
tokio-stream = { version = "0.1", optional = true }
async-stream = "0.3"

# Random for retry jitter
rand.workspace = true

# Utilities
url.workspace = true
base64.workspace = true

# Tracing
tracing.workspace = true

# Time/duration for rate limiting and retries
chrono.workspace = true

# UUID generation for request IDs
uuid = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions.workspace = true
wiremock = "0.6"

[features]
default = ["openai", "anthropic"]
# Provider implementations
openai = ["reqwest", "tokio", "tokio-stream"]
anthropic = ["reqwest", "tokio", "tokio-stream"]
ollama = ["reqwest", "tokio", "tokio-stream", "uuid"]
# All providers
all-providers = ["openai", "anthropic", "ollama"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
